[package]
name = "terminal_barista"
version = "2.0.0"
authors = ["Arman Drismir"]
license-file = "LICENSE.txt"
description = "Whip up drinks from the command line ☕️"
homepage = "https://github.com/ArmanDris/terminal_barista"
repository = "https://github.com/ArmanDris/terminal_barista"
readme = "README.md"
keywords = ["game", "ratatui", "gui"]
edition = "2024"

categories = ["games"]

[dependencies]
crossterm = "0.29.0"
rand = "0.9.1"
ratatui = "0.29.0"
